(draft) fix overlapping footer on mobile

--- a/mobile-assets/css/contact.css
+++ b/mobile-assets/css/contact.css
@@ -27,4 +27,7 @@
     #footer {
         margin-top: 10em;
     }
+    .content {
+        height: fit-content;
+    }
 }
